# zubbarska-ordinacija

./: CMakeLists.txt
.github/workflows/: build.yml
src/: clinicsettings.cpp  clinicsettings.h  clinicsettingsdialog.cpp  clinicsettingsdialog.h  database.cpp  database.h  interventiondialog.cpp  interventiondialog.h  main.cpp  mainwindow.cpp  mainwindow.h  models.h  patientdialog.cpp  patientdialog.h  patienthistorywidget.cpp  patienthistorywidget.h  reportgenerator.cpp  reportgenerator.h
