cmake_minimum_required(VERSION 3.16)
project(DentaPro VERSION 1.0.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

# ── Qt detection (Qt6 first, fall back to Qt5) ───────────────────────────────
find_package(Qt6 QUIET COMPONENTS Core Widgets Sql PrintSupport)
if(Qt6_FOUND)
    set(QT_FOUND TRUE)
    set(QT_LIBS Qt6::Core Qt6::Widgets Qt6::Sql Qt6::PrintSupport)
    message(STATUS "Using Qt6")
else()
    find_package(Qt5 5.15 REQUIRED COMPONENTS Core Widgets Sql PrintSupport)
    set(QT_FOUND TRUE)
    set(QT_LIBS Qt5::Core Qt5::Widgets Qt5::Sql Qt5::PrintSupport)
    message(STATUS "Using Qt5")
endif()

# ── Sources ──────────────────────────────────────────────────────────────────
set(SOURCES
    src/main.cpp
    src/mainwindow.cpp
    src/database.cpp
    src/patientdialog.cpp
    src/interventiondialog.cpp
    src/patienthistorywidget.cpp
    src/signaturewidget.cpp
    src/reportgenerator.cpp
    src/clinicsettings.cpp
    src/clinicsettingsdialog.cpp
)

set(HEADERS
    src/mainwindow.h
    src/database.h
    src/models.h
    src/patientdialog.h
    src/interventiondialog.h
    src/patienthistorywidget.h
    src/signaturewidget.h
    src/reportgenerator.h
    src/clinicsettings.h
    src/clinicsettingsdialog.h
)

# ── Resources ─────────────────────────────────────────────────────────────────
set(RESOURCES resources/resources.qrc)

# ── Platform-specific ────────────────────────────────────────────────────────
if(WIN32)
    # Windows: GUI app (no console), app icon
    set(WIN_ICON "")
    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/resources/app.rc")
        set(WIN_ICON resources/app.rc)
    endif()
    add_executable(DentaPro WIN32 ${SOURCES} ${HEADERS} ${RESOURCES} ${WIN_ICON})
elseif(APPLE)
    set(MACOSX_BUNDLE_ICON_FILE DentaPro.icns)
    add_executable(DentaPro MACOSX_BUNDLE ${SOURCES} ${HEADERS} ${RESOURCES})
else()
    add_executable(DentaPro ${SOURCES} ${HEADERS} ${RESOURCES})
endif()

# ── Link ──────────────────────────────────────────────────────────────────────
target_link_libraries(DentaPro PRIVATE ${QT_LIBS})

# ── Include paths ─────────────────────────────────────────────────────────────
target_include_directories(DentaPro PRIVATE src)

# ── Install ───────────────────────────────────────────────────────────────────
install(TARGETS DentaPro
    BUNDLE  DESTINATION .
    RUNTIME DESTINATION bin
)

# ── Post-build: copy DLL's on Windows (windeployqt) ──────────────────────────
if(WIN32)
    if(Qt6_FOUND)
        get_target_property(_qmake_executable Qt6::qmake IMPORTED_LOCATION)
    else()
        get_target_property(_qmake_executable Qt5::qmake IMPORTED_LOCATION)
    endif()
    get_filename_component(_qt_bin_dir "${_qmake_executable}" DIRECTORY)
    find_program(WINDEPLOYQT_EXECUTABLE windeployqt HINTS "${_qt_bin_dir}")

    if(WINDEPLOYQT_EXECUTABLE)
        add_custom_command(TARGET DentaPro POST_BUILD
            COMMAND "${WINDEPLOYQT_EXECUTABLE}"
                    --verbose 0
                    --no-compiler-runtime
                    --no-translations
                    "$<TARGET_FILE:DentaPro>"
            COMMENT "Deploying Qt runtime DLLs..."
        )
    endif()
endif()
